refactor openapi, fix services and fake auth
This commit refactor openapi and add some fixes to services:
- album service accept page & size
- fixes when creating and updating album
- change user.id with user.username in album table
